Build a UI and prepare for general use.
Some features:
    UI enables loading of mazes and robots and control over the robot.
    Mazes have title and author.
    Robots have title, author, and description.
    Instructions are documented in the README.
    The node app serves markdown.
    The node app serves maze and robot listings.
    The node app serves JSONP maze data and JS robots.
    Expand the list of sample robots and mazes.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/EchNet/little-lost-robot",
   "dependencies": {
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "marked": "^0.3.3"
   }
 }
